--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my simple website</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
+    <div>
+        <h3>my first website</h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis, sed. Mollitia, earum impedit tenetur reprehenderit praesentium corporis iure doloremque id quos nemo, expedita quaerat nulla ipsum quidem. Reprehenderit, expedita architecto!</p>
+    </div>
     
 </body>
 </html>
