--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
         <h3>my first website</h3>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis, sed. Mollitia, earum impedit tenetur reprehenderit praesentium corporis iure doloremque id quos nemo, expedita quaerat nulla ipsum quidem. Reprehenderit, expedita architecto!</p>
     </div>
+    <div>
+        <h3>my second website</h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis, sed. Mollitia, earum impedit tenetur reprehenderit praesentium corporis iure doloremque id quos nemo, expedita quaerat nulla ipsum quidem. Reprehenderit, expedita architecto!</p>
+    </div>
+    <div>
+        <h3>my third website</h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis, sed. Mollitia, earum impedit tenetur reprehenderit praesentium corporis iure doloremque id quos nemo, expedita quaerat nulla ipsum quidem. Reprehenderit, expedita architecto!</p>
+    </div>
     
 </body>
 </html>
