--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
         <h3>my third website</h3>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis, sed. Mollitia, earum impedit tenetur reprehenderit praesentium corporis iure doloremque id quos nemo, expedita quaerat nulla ipsum quidem. Reprehenderit, expedita architecto!</p>
     </div>
+    <div>
+        <h3>how to push incremental code</h3>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m"add meaningful commit"</li>
+            <li>git push</li>
+        </ul>
+    </div>
     
 </body>
 </html>
