--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
             <li>git push</li>
         </ul>
     </div>
+    <div>
+        <h3>programmer</h3>
+        <img src="images/images (1).jpg" alt="">
+    </div>
     
 </body>
 </html>
